--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "body-parser": "^1.17.1",
     "connect-redis": "^3.2.0",
     "csurf": "^1.9.0",
+    "dompurify": "^0.8.5",
     "eslint-plugin-async-await": "0.0.0",
     "express": "^4.15.2",
     "express-content-length-validator": "^1.0.0",
